dts: config: enabling uart3/4 and routing for serial over lan
System host uses uart 1/2. I/O base address and serirq can be set from
super i/o, see datasheet section 50.

BMC uses uart 3/4 with uart routing for serial redirect (serial over
lan) feature.

Signed-off-by: Troy Lee <troy_lee@aspeedtech.com>
Change-Id: I2a71b6e33936ee38cc415c5fb5a9de35ff4b7033

--- a/arch/arm/boot/dts/aspeed-ast2600-evb.dts
+++ b/arch/arm/boot/dts/aspeed-ast2600-evb.dts
@@ -253,6 +253,18 @@
 	status = "okay";
 };
 
+&uart3 {
+	status = "okay";
+};
+
+&uart4 {
+	status = "okay";
+};
+
+&uart_routing {
+	status = "okay";
+};
+
 &adc0 {
 	vref = <2500>;
 	status = "okay";
