--- a/arch/arm/boot/dts/aspeed-ast2600a1-obmc.dts
+++ b/arch/arm/boot/dts/aspeed-ast2600a1-obmc.dts
@@ -831,6 +831,18 @@
 	status = "okay";
 };
 
+&uart3 {
+	status = "okay";
+};
+
+&uart4 {
+	status = "okay";
+};
+
+&uart_routing {
+	status = "okay";
+};
+
 &gpio0 {
 	gpio-line-names =
 	/*A0 - A7*/	"", "", "", "", "", "", "", "",
