--- a/arch/arm/configs/aspeed_ast2605_defconfig
+++ b/arch/arm/configs/aspeed_ast2605_defconfig
@@ -347,6 +347,7 @@ CONFIG_ASPEED_MCTP=y
 CONFIG_ASPEED_OTP=y
 CONFIG_ASPEED_ESPI=y
 CONFIG_ASPEED_SSP=m
+CONFIG_ASPEED_UART_ROUTING=y
 CONFIG_IIO=y
 CONFIG_ASPEED_ADC=y
 CONFIG_MAX1363=y
