dts: ast2600: Add default value of ngpios.
Assign 128 for sgpiom0 ngpios and 80 for sgpiom1 ngpios.

Signed-off-by: Steven Lee <steven_lee@aspeedtech.com>
Change-Id: Ib6f306572f73ace41ec3f3464df397fac9331fe4

--- a/arch/arm/boot/dts/aspeed-ast2600-ncsi.dts
+++ b/arch/arm/boot/dts/aspeed-ast2600-ncsi.dts
@@ -125,7 +125,13 @@
 };
 
 &sgpiom0 {
-        status = "okay";
+	status = "okay";
+	ngpios = <128>;
+};
+
+&sgpiom1 {
+	status = "okay";
+	ngpios = <80>;
 };
 
 &jtag1 {
