--- a/arch/arm/boot/dts/aspeed-ast2600a2-obmc.dts
+++ b/arch/arm/boot/dts/aspeed-ast2600a2-obmc.dts
@@ -632,6 +632,26 @@
 	status = "okay";
 };
 
+&pcie_kcs1 {
+	kcs_addr = <0x3a0>;
+	status = "okay";
+};
+
+&pcie_kcs2 {
+	kcs_addr = <0x3a8>;
+	status = "okay";
+};
+
+&pcie_kcs3 {
+	kcs_addr = <0x3a2>;
+	status = "okay";
+};
+
+&pcie_kcs4 {
+	kcs_addr = <0x3a4>;
+	status = "okay";
+};
+
 &espi_ctrl {
 	status = "okay";
 
