dtsi: soc display: add pcie power on / off interrupt
Add for driver to obtain the interrupt from pcie power on / off

Signed-off-by: tommy-huang <tommy_huang@aspeedtech.com>
Change-Id: I601ce3c6c53b4c25f87e0c63a258e06f8ce0f5ad

--- a/arch/arm/boot/dts/aspeed-g6.dtsi
+++ b/arch/arm/boot/dts/aspeed-g6.dtsi
@@ -574,7 +574,9 @@
 				clocks = <&syscon ASPEED_CLK_GATE_D1CLK>;
 				resets = <&syscon ASPEED_RESET_CRT>, <&syscon ASPEED_RESET_GRAPHICS>;
 				reset-names = "crt", "engine";
-				interrupts = <GIC_SPI 14 IRQ_TYPE_LEVEL_HIGH>;
+				interrupts-extended = <&gic GIC_SPI 14 IRQ_TYPE_LEVEL_HIGH>,
+						      <&scu_ic0 ASPEED_AST2600_SCU_IC0_PCIE_PERST_LO_TO_HI>,
+						      <&scu_ic0 ASPEED_AST2600_SCU_IC0_PCIE_PERST_HI_TO_LO>;
 				status = "disabled";
 			};
 
